# MiniGameRuntime

./: CMakeLists.txt  README.md
MiniGameRuntime/: CMakeLists.txt  MiniGameRuntime.cpp  MiniGameRuntime.h
MiniGameRuntime/docs/daily/: 2026-6-23.md  2026-6-24.md  2026-6-29.md
MiniGameRuntime/include/Common/: Entity.h
MiniGameRuntime/include/Components/: AABBComponent.h  TransformComponent.h  VelocityComponent.h
MiniGameRuntime/include/Core/: EntityManager.h  World.h
MiniGameRuntime/include/Math/: Vec2.h
MiniGameRuntime/include/Physics/: PhysicsUtils.h
MiniGameRuntime/include/Systems/: CollisionSystem.h
MiniGameRuntime/src/: EntityManager.cpp  TransformComponent.cpp  Vec2.cpp  Vec2.h  VelocityComponent.cpp  main.cpp
MiniGameRuntime/src/Core/: World.cpp
MiniGameRuntime/src/Systems/: CollisionSystem.cpp
